--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 17:34:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@33afa13b]">doUserReg</td> 
-  <td>main@24119573</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 17:34:26</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@33afa13b]">doLogin</td> 
-  <td>main@24119573</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/01 17:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@4445629]">doUserReg</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/01 17:53:37</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@4445629]">doLogin</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/01 17:53:37</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@4445629]">thirdTest</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/01 17:53:37</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@4445629]">fourthTest</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
 </table>
